@@ -1,5 +1,7 @@
-div.status { padding-bottom: 10px;
-             margin-bottom: 10px;
+body { margin: 0; }
+
+div.mine { background-color: MistyRose; } 
+div.status { padding: 8px;
              border-bottom: 1px solid #ccc; }
 div.icon { float: left; width: 45px; }
 div.text { margin-left: 45px; }
