@@ -1,4 +1,4 @@
-<div class='status' id='$id'>
+<div class='status $styles' id='$id'>
   <div class='icon'>
     <a href='gfeedline://twitter.com/$user_name/status/$id' 
        style='color: #$user_color;'>
